# chip8

./: .gitignore  CMakeLists.txt  README.md  build.bat  run_tests.bat
assets/: res.qrc
config/: config.json
config/Astro Dodge [Revival Studios, 2008].ch8/: config.json
config/Brick (Brix hack, 1990).ch8/: config.json
config/IBM Logo.ch8/: config.json
config/Missile [David Winter].ch8/: config.json
config/Pong (1 player).ch8/: config.json
config/Rush Hour [Hap, 2006].ch8/: config.json
config/Soccer.ch8/: config.json
config/Space Invaders [David Winter].ch8/: config.json
config/Tank.ch8/: config.json
config/Tetris [Fran Dachille, 1991].ch8/: config.json
config/flightrunner.ch8/: config.json
src/: chip_8.cpp  chip_8.h  chip_8_widget.cpp  chip_8_widget.h  configdialog.cpp  configdialog.h  configdialog.ui  debugwidget.cpp  debugwidget.h  debugwidget.ui  main.cpp  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  romdirwidget.cpp  romdirwidget.h  romdirwidget.ui  romlistwidget.cpp  romlistwidget.h  romlistwidget.ui
tests/: CMakeLists.txt
tests/src/: tests.cpp
